# src/main/resources/openapi.yaml
@@ -2,50 +2,79 @@ openapi: 3.0.2
 servers:
   - url: /v3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
-  description: >-
-    This is a sample Pet Store Server based on the OpenAPI 3.0 specification. 
-    You can find out more about
-
-    Swagger at [http://swagger.io](http://swagger.io). In the third iteration of
-    the pet store, we've switched to the design first approach!
-
-    You can now help us improve the API whether it's by making changes to the
-    definition itself or to the code.
-
-    That way, with time, we can improve the API in general, and expose some of
-    the new features in OAS3.
-
+  description: |-
+    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
+    Swagger at [http://swagger.io](http://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
+    You can now help us improve the API whether it's by making changes to the definition itself or to the code.
+    That way, with time, we can improve the API in general, and expose some of the new features in OAS3.
 
     Some useful links:
-
-    - [The Pet Store
-    repository](https://github.com/swagger-api/swagger-petstore)
-
-    - [The source API definition for the Pet
-    Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
-  version: 1.0.0
+    - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)
+    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
+  version: 1.0.17
+  title: Swagger Petstore - OpenAPI 3.0
+  termsOfService: 'http://swagger.io/terms/'
+  contact:
+    email: apiteam@swagger.io
+  license:
+    name: Apache 2.0
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 tags:
   - name: pet
     description: Everything about your Pets
     externalDocs:
       description: Find out more
-      url: http://swagger.io
+      url: 'http://swagger.io'
+  - name: store
+    description: Access to Petstore orders
+    externalDocs:
+      description: Find out more about our store
+      url: 'http://swagger.io'
+  - name: user
+    description: Operations about user
 paths:
   /pet:
+    post:
+      tags:
+        - pet
+      summary: Add a new pet to the store
+      description: Add a new pet to the store
+      operationId: addPet
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        '405':
+          description: Invalid input
+      security:
+        - petstore_auth:
+            - 'write:pets'
+            - 'read:pets'
+      requestBody:
+        description: Create a new pet in the store
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Pet'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/Pet'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Pet'
     put:
       tags:
         - pet
       summary: Update an existing pet
       description: Update an existing pet by Id
       operationId: updatePet
-      requestBody:
-        description: Update an existent pet in the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Pet'
-        required: true
       responses:
         '200':
           description: Successful operation
@@ -62,14 +91,13 @@ paths:
           description: Pet not found
         '405':
           description: Validation exception
-    post:
-      tags:
-        - pet
-      summary: Add a new pet to the store
-      description: Add a new pet to the store
-      operationId: addPet
+      security:
+        - petstore_auth:
+            - 'write:pets'
+            - 'read:pets'
       requestBody:
-        description: Create a new pet in the store
+        description: Update an existent pet in the store
+        required: true
         content:
           application/json:
             schema:
@@ -80,23 +108,6 @@ paths:
           application/x-www-form-urlencoded:
             schema:
               $ref: '#/components/schemas/Pet'
-        required: true
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Pet'
-        '405':
-          description: Invalid input
-      security:
-          - petstore_auth:
-              - 'write:pets'
-              - 'read:pets'
   /pet/findByStatus:
     get:
       tags:
@@ -109,7 +120,6 @@ paths:
           in: query
           description: Status values that need to be considered for filter
           required: false
-          style: form
           explode: true
           schema:
             type: string
@@ -177,7 +187,7 @@ paths:
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
-  /pet/{petId}:
+  '/pet/{petId}':
     get:
       tags:
         - pet
@@ -269,7 +279,36 @@ paths:
         - petstore_auth:
             - 'write:pets'
             - 'read:pets'
-  /user/{username}:
+  /user:
+    post:
+      tags:
+        - user
+      summary: Create user
+      description: This can only be done by the logged in user.
+      operationId: createUser
+      responses:
+        default:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/User'
+        description: Created user object
+  '/user/{username}':
     get:
       tags:
         - user
@@ -297,33 +336,60 @@ paths:
           description: Invalid username supplied
         '404':
           description: User not found
-  /user:
-    post:
+    put:
       tags:
         - user
-      summary: Create user
+      summary: Update user
+      x-swagger-router-controller: UserController
       description: This can only be done by the logged in user.
-      operationId: createUser
+      operationId: updateUser
+      parameters:
+        - name: username
+          in: path
+          description: name that needs to be updated
+          required: true
+          schema:
+            type: string
+      responses:
+        default:
+          description: successful operation
       requestBody:
-        description: Created user object
+        description: Update an existent user in the store
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/User'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/User'
+    delete:
+      tags:
+        - user
+      summary: Delete user
+      description: This can only be done by the logged in user.
+      operationId: deleteUser
+      parameters:
+        - name: username
+          in: path
+          description: The name that needs to be deleted
+          required: true
+          schema:
+            type: string
       responses:
-        default:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid username supplied
+        '404':
+          description: User not found
+externalDocs:
+  description: Find out more about Swagger
+  url: 'http://swagger.io'
 components:
   schemas:
     Category:
-      type: object
+      x-swagger-router-model: io.swagger.petstore.model.Category
       properties:
         id:
           type: integer
@@ -334,8 +400,42 @@ components:
           example: Dogs
       xml:
         name: category
-    Tag:
       type: object
+    User:
+      x-swagger-router-model: io.swagger.petstore.model.User
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 10
+        username:
+          type: string
+          example: theUser
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: James
+        email:
+          type: string
+          example: john@email.com
+        password:
+          type: string
+          example: 12345
+        phone:
+          type: string
+          example: 12345
+        userStatus:
+          type: integer
+          format: int32
+          example: 1
+          description: User Status
+      xml:
+        name: user
+      type: object
+    Tag:
+      x-swagger-router-model: io.swagger.petstore.model.Tag
       properties:
         id:
           type: integer
@@ -344,11 +444,12 @@ components:
           type: string
       xml:
         name: tag
+      type: object
     Pet:
+      x-swagger-router-model: io.swagger.petstore.model.Pet
       required:
         - name
         - photoUrls
-      type: object
       properties:
         id:
           type: integer
@@ -373,6 +474,8 @@ components:
             wrapped: true
           items:
             $ref: '#/components/schemas/Tag'
+            xml:
+              name: tag
         status:
           type: string
           description: pet status in the store
@@ -382,40 +485,8 @@ components:
             - sold
       xml:
         name: pet
-    User:
       type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          example: 10
-        username:
-          type: string
-          example: theUser
-        firstName:
-          type: string
-          example: John
-        lastName:
-          type: string
-          example: James
-        email:
-          type: string
-          example: john@email.com
-        password:
-          type: string
-          example: '12345'
-        phone:
-          type: string
-          example: '12345'
-        userStatus:
-          type: integer
-          description: User Status
-          format: int32
-          example: 1
-      xml:
-        name: user
     ApiResponse:
-      type: object
       properties:
         code:
           type: integer
@@ -426,10 +497,27 @@ components:
           type: string
       xml:
         name: '##default'
+      type: object
   requestBodies:
     Pet:
-      description: Pet object that needs to be added to the store
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Pet'
+        application/xml:
+          schema:
+            $ref: '#/components/schemas/Pet'
+      description: Pet object that needs to be added to the store
+  securitySchemes:
+    petstore_auth:
+      type: oauth2
+      flows:
+        implicit:
+          authorizationUrl: 'https://petstore.swagger.io/oauth/authorize'
+          scopes:
+            'write:pets': modify pets in your account
+            'read:pets': read your pets
+    api_key:
+      type: apiKey
+      name: api_key
+      in: header
